# Project-MAVERICK

./: CMakeLists.txt  Checklist tab  ChecklistTab.cpp  ChecklistTab.h  DragDropWindow.qml  Eisenhower.cpp  Eisenhower.h  Filters.ui  MAVERICK.PRO  MAVERICK.pro  MAVERICK.sln  MAVERICK.vcxproj  MAVERICK.vcxproj.filters  MatrixView.ui  README.md  SettingsEisenhower.ui  TaskDelegate.qml  TaskList.qml  TaskManager.ui  TodoList.qml  calendar.pro  checklist tab  crud  database.cpp  database.h  dialog.ui  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  maverick.files  notes.cpp  notes.h  notes.ui  notification system  pomodoro.cpp  pomodoro.h  pomodoro.ui  pomodorosettings.cpp  (+19 more)
MAVERICK/x64/Debug/: MAVERICK.exe.recipe  MAVERICK.ilk  vc143.idb
MAVERICK/x64/Debug/MAVERICK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MAVERICK.lastbuildstate  MAVERICK.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog
MAVERICK/x64/Debug/qt/: qtvars.xml
MAVERICK/x64/Debug/qt/moc/: moc_database.cpp  moc_taskmanager.cpp
MAVERICK/x64/Debug/qt/qmake/: import.qml  qtvars.pro  qtvars.vcxproj
MAVERICK/x64/Debug/qt/rcc/: qrc_qml.cpp
